content/nomad/v1.11.x/content/docs/other-specifications/node-pool.mdx
---
layout: docs
page_title: Nomad node pool specification
description: |-
  Learn about Nomad's node pool specification. Review an example node pool specification. Configure description, metadata, and scheduler options.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-17T20:24:06-05:00
last_modified: 2025-11-17T20:24:06-05:00
# END AUTO GENERATED METADATA
---

# Nomad node pool specification

Node pools group nodes, letting you restrict which jobs are able to place
allocations in a given set of nodes. Specify node pools as HCL files and submit
them with the [`nomad node pool apply`][pool-apply] CLI command. Unlike [job
specifications][jobspecs], node pool specifications do not support HCL2
features like functions.

This example is a node pool specification generated with the [`nomad node pool
init` command][pool-init].

```hcl
node_pool "example" {

  description = "Example node pool"

  # meta is optional metadata on the node pool, defined as key-value pairs.
  # The scheduler does not use node pool metadata as part of scheduling.
  meta {
    environment = "prod"
    owner       = "sre"
  }

  # node_identity_ttl is an optional parameter that sets the TTL for all node
  # identities issued to nodes in this node pool. The value must be a valid
  # duration string (e.g. "30m", "1h", "24h"). If not set, the default value is
  # "24h".
  # node_identity_ttl = "24h"

  # The scheduler configuration options specific to this node pool. This block
  # supports a subset of the fields supported in the global scheduler
  # configuration as described at:
  # https://developer.hashicorp.com/nomad/commands/operator/scheduler/set-config
  #
  # * scheduler_algorithm is the scheduling algorithm to use for the pool.
  #   If not defined, the global cluster scheduling algorithm is used.
  #
  # Available only in Nomad Enterprise.

  # scheduler_config {
  #   scheduler_algorithm = "spread"
  # }
}
```

Example usage if the above is in a file named `pool.nomad.hcl`:

```shell-session
$ nomad node pool apply ./pool.nomad.hcl
Successfully applied node pool "example"!
```

## Parameters

- `description` `(string: <optional>)` - Sets a human readable description for
  the node pool.

- `meta` `(map[string]string: <optional>)` - Sets optional metadata on the node
  pool, defined as key-value pairs. The scheduler does not use node pool
  metadata as part of scheduling.

- `node_identity_ttl` `(string: <optional>)` - Sets the TTL for node identities
  issued to nodes in this node pool. The value must be a valid duration string
  (e.g. "30m", "1h", "24h"). If not set, the default value is "24h".

- `scheduler_config` <code>([SchedulerConfig][sched-config]: nil)</code> <EnterpriseAlert inline /> -
  Sets scheduler configuration options specific to the node pool. If not
  defined, the global scheduler configurations are used.

### `scheduler_config` parameters <EnterpriseAlert inline />

- `scheduler_algorithm` `(string: <optional>)` - The [scheduler algorithm][]
  used for this node pool. Must be one of `binpack` or `spread`.

- `memory_oversubscription_enabled` `(bool: <optional>)` - The [memory
  oversubscription][] setting to use for this node pool.

[pool-apply]: /nomad/commands/node-pool/apply
[jobspecs]: /nomad/docs/job-specification
[pool-init]: /nomad/commands/node-pool/init
[sched-config]: #scheduler_config-parameters
[scheduler algorithm]: /nomad/api-docs/operator/scheduler#scheduleralgorithm-1
[memory oversubscription]: /nomad/api-docs/operator/scheduler#memoryoversubscriptionenabled-1
